# SQL-parser

./: Cargo.toml  README.md  index.html  package-lock.json
assets/css/: card.css
js/: index.js
pkg/: README.md  package.json  rode_sql_parser.js  rode_sql_parser_bg.js  rode_sql_parser_bg.wasm
src/: lexer.rs  lib.rs  parser.rs  query.rs  symbol.rs
