[package]
name = "rode_sql_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.20"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = { version = "0.2.28"}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"